--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button type="submit">OK</button>
       </form>
       <br /> Hello, <span id="name">guest</span>!
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
     <script src="script.js"></script>
 </body>
 </html>
